feat(plugin): adapter fs -- local

--- a/configure/etc/conf/application.properties
+++ b/configure/etc/conf/application.properties
@@ -166,6 +166,11 @@ datacap.fs.bucket=
 #datacap.fs.endpoint=
 #datacap.fs.bucket=
 
+################################### Plugin management configure #################################
+# 继承父类的包，多个使用 , 分隔
+# Extend the parent class package, separated by ,
+plugin.manager.extend.packages=com.fasterxml.jackson
+
 ################################# Experimental features #################################
 # This configuration is used to dynamically increase the total number of rows of returned data in SQL during query, and currently only takes effect for user-directed queries
 # If the total number of rows returned is included in the SQL, it will not be automatically incremented
