--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
         <!--        <module>shaded/datacap-shaded-ydb</module>-->
         <!--        <module>shaded/datacap-shaded-pinot</module>-->
         <module>fs/datacap-fs-spi</module>
-        <!--        <module>fs/datacap-fs-local</module>-->
+        <module>fs/datacap-fs-local</module>
         <!--        <module>fs/datacap-fs-qiniu</module>-->
         <!--        <module>fs/datacap-fs-alioss</module>-->
         <!--        <module>fs/datacap-fs-tencent-cos</module>-->
@@ -107,6 +107,7 @@
         <module>test/datacap-test-lib</module>
         <module>test/datacap-test-executor</module>
         <module>test/datacap-test-scheduler</module>
+        <module>test/datacap-test-fs</module>
     </modules>
 
     <name>datacap</name>
