--- a/test/datacap-test-plugin/pom.xml
+++ b/test/datacap-test-plugin/pom.xml
@@ -31,6 +31,12 @@
         </dependency>
         <dependency>
             <groupId>io.edurt.datacap</groupId>
+            <artifactId>datacap-convert-json</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.edurt.datacap</groupId>
             <artifactId>datacap-convert-spi</artifactId>
             <scope>test</scope>
         </dependency>
