fix(convert): fix json convert

--- a/configure/etc/conf/application.properties
+++ b/configure/etc/conf/application.properties
@@ -125,7 +125,7 @@ datacap.parser.sql.defaultEngine=Trino
 ################################# File System configure #################################
 # For the file storage type, please refer to datacap-fs-<Type>, which defaults to Local
 # ------ Local File System ------ #
-datacap.fs.type=Local
+datacap.fs.type=LocalFs
 datacap.fs.access=
 datacap.fs.secret=
 datacap.fs.endpoint=
