--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -9,3 +9,4 @@ datacap-convert-none=convert/datacap-convert-none/pom.xml
 datacap-executor-local=executor/datacap-executor-local/pom.xml
 datacap-executor-seatunnel=executor/datacap-executor-seatunnel/pom.xml
 datacap-scheduler-local=scheduler/datacap-scheduler-local/pom.xml
+datacap-fs-local=fs/datacap-fs-local/pom.xml
