feat(plugin): add test for qiniu

--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -10,3 +10,4 @@ datacap-executor-local=executor/datacap-executor-local/pom.xml
 datacap-executor-seatunnel=executor/datacap-executor-seatunnel/pom.xml
 datacap-scheduler-local=scheduler/datacap-scheduler-local/pom.xml
 datacap-fs-local=fs/datacap-fs-local/pom.xml
+datacap-fs-qiniu=fs/datacap-fs-qiniu/pom.xml
