--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -11,3 +11,4 @@ datacap-executor-seatunnel=executor/datacap-executor-seatunnel/pom.xml
 datacap-scheduler-local=scheduler/datacap-scheduler-local/pom.xml
 datacap-fs-local=fs/datacap-fs-local/pom.xml
 datacap-fs-qiniu=fs/datacap-fs-qiniu/pom.xml
+datacap-fs-alioss=fs/datacap-fs-alioss/pom.xml
