--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
         <module>fs/datacap-fs-spi</module>
         <module>fs/datacap-fs-local</module>
         <module>fs/datacap-fs-qiniu</module>
-        <!--        <module>fs/datacap-fs-alioss</module>-->
+        <module>fs/datacap-fs-alioss</module>
         <!--        <module>fs/datacap-fs-tencent-cos</module>-->
         <!--        <module>fs/datacap-fs-amazon-s3</module>-->
         <!--        <module>fs/datacap-fs-minio</module>-->
