--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -12,3 +12,4 @@ datacap-scheduler-local=scheduler/datacap-scheduler-local/pom.xml
 datacap-fs-local=fs/datacap-fs-local/pom.xml
 datacap-fs-qiniu=fs/datacap-fs-qiniu/pom.xml
 datacap-fs-alioss=fs/datacap-fs-alioss/pom.xml
+datacap-fs-tencent-cos=fs/datacap-fs-tencent-cos/pom.xml
