--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
         <module>fs/datacap-fs-qiniu</module>
         <module>fs/datacap-fs-alioss</module>
         <module>fs/datacap-fs-tencent-cos</module>
-        <!--        <module>fs/datacap-fs-amazon-s3</module>-->
+        <module>fs/datacap-fs-amazon-s3</module>
         <!--        <module>fs/datacap-fs-minio</module>-->
         <module>parser/datacap-parser-spi</module>
         <!--        <module>parser/datacap-parser-trino</module>-->
