--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -14,3 +14,4 @@ datacap-fs-qiniu=fs/datacap-fs-qiniu/pom.xml
 datacap-fs-alioss=fs/datacap-fs-alioss/pom.xml
 datacap-fs-tencent-cos=fs/datacap-fs-tencent-cos/pom.xml
 datacap-fs-amazon-s3=fs/datacap-fs-amazon-s3/pom.xml
+datacap-fs-minio=fs/datacap-fs-minio/pom.xml
