--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,11 @@
         <module>lib/datacap-schedule</module>
         <module>driver/datacap-driver-redis</module>
         <module>driver/datacap-driver-mongo</module>
+        <module>shaded/datacap-shaded-ydb</module>
+        <module>shaded/datacap-shaded-pinot</module>
         <module>plugin/datacap-plugin-mysql</module>
         <module>plugin/datacap-plugin-clickhouse</module>
+        <module>plugin/datacap-plugin-solr</module>
         <!--        <module>plugin/datacap-native-alioss</module>-->
         <!--        <module>plugin/datacap-native-zookeeper</module>-->
         <!--        <module>plugin/datacap-native-redis</module>-->
@@ -74,13 +77,10 @@
         <!--        <module>plugin/datacap-plugin-scylladb</module>-->
         <!--        <module>plugin/datacap-plugin-paradedb</module>-->
         <!--        <module>plugin/datacap-plugin-timescale</module>-->
-        <!--        <module>plugin/datacap-plugin-solr</module>-->
         <module>plugin/datacap-plugin-influxdb</module>
         <module>executor/datacap-executor-spi</module>
         <module>executor/datacap-executor-local</module>
         <module>executor/datacap-executor-seatunnel</module>
-        <!--        <module>shaded/datacap-shaded-ydb</module>-->
-        <!--        <module>shaded/datacap-shaded-pinot</module>-->
         <module>fs/datacap-fs-spi</module>
         <module>fs/datacap-fs-local</module>
         <module>fs/datacap-fs-qiniu</module>
@@ -89,12 +89,12 @@
         <module>fs/datacap-fs-amazon-s3</module>
         <module>fs/datacap-fs-minio</module>
         <module>parser/datacap-parser-spi</module>
-        <!--        <module>parser/datacap-parser-trino</module>-->
-        <!--        <module>parser/datacap-parser-mysql</module>-->
+        <module>parser/datacap-parser-trino</module>
+        <module>parser/datacap-parser-mysql</module>
         <module>scheduler/datacap-scheduler-spi</module>
         <module>scheduler/datacap-scheduler-local</module>
         <module>notify/datacap-notify-spi</module>
-        <!--        <module>notify/datacap-notify-dingtalk</module>-->
+        <module>notify/datacap-notify-dingtalk</module>
         <module>convert/datacap-convert-spi</module>
         <module>convert/datacap-convert-txt</module>
         <module>convert/datacap-convert-json</module>
@@ -344,6 +344,11 @@
             <dependency>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-reflect</artifactId>
+                <version>${kotlin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib</artifactId>
                 <version>${kotlin.version}</version>
             </dependency>
             <dependency>
