--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -2,6 +2,7 @@ datacap-plugin-mysql=plugin/datacap-plugin-mysql/pom.xml
 datacap-plugin-clickhouse=plugin/datacap-plugin-clickhouse/pom.xml
 datacap-plugin-influxdb=plugin/datacap-plugin-influxdb/pom.xml
 datacap-plugin-solr=plugin/datacap-plugin-solr/pom.xml
+datacap-plugin-cratedb=plugin/datacap-plugin-cratedb/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
