--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <module>plugin/datacap-plugin-clickhouse</module>
         <module>plugin/datacap-plugin-solr</module>
         <module>plugin/datacap-plugin-cratedb</module>
-        <!--        <module>plugin/datacap-native-alioss</module>-->
+        <module>plugin/datacap-plugin-alioss</module>
         <!--        <module>plugin/datacap-native-zookeeper</module>-->
         <!--        <module>plugin/datacap-native-redis</module>-->
         <!--        <module>plugin/datacap-native-kafka</module>-->
