feat(plugin): adapter plugin -- zookeeper

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <module>plugin/datacap-plugin-solr</module>
         <module>plugin/datacap-plugin-cratedb</module>
         <module>plugin/datacap-plugin-alioss</module>
-        <!--        <module>plugin/datacap-native-zookeeper</module>-->
+        <module>plugin/datacap-plugin-zookeeper</module>
         <!--        <module>plugin/datacap-native-redis</module>-->
         <!--        <module>plugin/datacap-native-kafka</module>-->
         <!--        <module>plugin/datacap-native-h2</module>-->
