--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -4,6 +4,7 @@ datacap-plugin-influxdb=plugin/datacap-plugin-influxdb/pom.xml
 datacap-plugin-solr=plugin/datacap-plugin-solr/pom.xml
 datacap-plugin-cratedb=plugin/datacap-plugin-cratedb/pom.xml
 datacap-plugin-alioss=plugin/datacap-plugin-alioss/pom.xml
+datacap-plugin-zookeeper=plugin/datacap-plugin-zookeeper/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
