--- a/plugin/datacap-plugin-zookeeper/pom.xml
+++ b/plugin/datacap-plugin-zookeeper/pom.xml
@@ -10,12 +10,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>datacap-native-zookeeper</artifactId>
-    <description>DataCap - Apache Zookeeper</description>
+    <artifactId>datacap-plugin-zookeeper</artifactId>
+    <description>DataCap - Plugin - Apache Zookeeper</description>
 
     <properties>
         <zookeeper.version>0.11</zookeeper.version>
-        <plugin.name>native-zookeeper</plugin.name>
     </properties>
 
     <dependencies>
@@ -27,10 +26,6 @@
         <dependency>
             <groupId>io.edurt.datacap</groupId>
             <artifactId>datacap-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
         </dependency>
         <dependency>
             <groupId>com.101tec</groupId>
@@ -62,6 +57,24 @@
                         <goals>
                             <goal>single</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
+                            <excludeScope>provided</excludeScope>
+                            <includeScope>runtime</includeScope>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
