--- a/plugin/datacap-plugin-kafka/pom.xml
+++ b/plugin/datacap-plugin-kafka/pom.xml
@@ -10,13 +10,11 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>datacap-native-kafka</artifactId>
-    <description>DataCap - Kafka</description>
+    <artifactId>datacap-plugin-kafka</artifactId>
+    <description>DataCap - Plugin - Apache Kafka</description>
 
     <properties>
         <kafka.version>3.6.1</kafka.version>
-        <testcontainers.version>1.17.6</testcontainers.version>
-        <plugin.name>native-kafka</plugin.name>
     </properties>
 
     <dependencies>
@@ -30,23 +28,14 @@
             <artifactId>datacap-common</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
-        </dependency>
-        <dependency>
             <groupId>io.edurt.datacap</groupId>
             <artifactId>datacap-parser</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
             <version>${kafka.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>kafka</artifactId>
-            <version>${testcontainers.version}</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -69,6 +58,24 @@
                         <goals>
                             <goal>single</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
+                            <excludeScope>provided</excludeScope>
+                            <includeScope>runtime</includeScope>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
