feat(plugin): adapter plugin -- redis

--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -6,6 +6,7 @@ datacap-plugin-cratedb=plugin/datacap-plugin-cratedb/pom.xml
 datacap-plugin-alioss=plugin/datacap-plugin-alioss/pom.xml
 datacap-plugin-zookeeper=plugin/datacap-plugin-zookeeper/pom.xml
 datacap-plugin-kafka=plugin/datacap-plugin-kafka/pom.xml
+datacap-plugin-redis=plugin/datacap-plugin-redis/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
