--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <module>plugin/datacap-plugin-alioss</module>
         <module>plugin/datacap-plugin-zookeeper</module>
         <module>plugin/datacap-plugin-kafka</module>
-        <!--        <module>plugin/datacap-native-redis</module>-->
+        <module>plugin/datacap-plugin-redis</module>
         <!--        <module>plugin/datacap-native-h2</module>-->
         <!--        <module>plugin/datacap-native-hdfs</module>-->
         <!--        <module>plugin/datacap-http-cratedb</module>-->
