--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <module>plugin/datacap-plugin-kafka</module>
         <module>plugin/datacap-plugin-redis</module>
         <module>plugin/datacap-plugin-h2</module>
-        <!--        <module>plugin/datacap-native-hdfs</module>-->
+        <module>plugin/datacap-plugin-hdfs</module>
         <!--        <module>plugin/datacap-http-cratedb</module>-->
         <!--        <module>plugin/datacap-http-clickhouse</module>-->
         <!--        <module>plugin/datacap-http-ceresdb</module>-->
