feat(plugin): adapter plugin -- dremio

--- a/plugin/datacap-plugin-dremio/pom.xml
+++ b/plugin/datacap-plugin-dremio/pom.xml
@@ -10,22 +10,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>datacap-jdbc-dremio</artifactId>
-    <description>DataCap - Dremio</description>
+    <artifactId>datacap-plugin-dremio</artifactId>
+    <description>DataCap - Plugin - Dremio</description>
 
     <properties>
         <dremio.version>20.1.0-202202061055110045-36733c65</dremio.version>
-        <plugin.name>jdbc-dremio</plugin.name>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.edurt.datacap</groupId>
             <artifactId>datacap-spi</artifactId>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
         </dependency>
         <dependency>
             <groupId>com.dremio.distribution</groupId>
@@ -53,6 +49,24 @@
                         <goals>
                             <goal>single</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
+                            <excludeScope>provided</excludeScope>
+                            <includeScope>runtime</includeScope>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
