feat(plugin): adapter plugin -- matrixone

--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -16,6 +16,7 @@ datacap-plugin-druid=plugin/datacap-plugin-druid/pom.xml
 datacap-plugin-duckdb=plugin/datacap-plugin-duckdb/pom.xml
 datacap-plugin-pinot=plugin/datacap-plugin-pinot/pom.xml
 datacap-plugin-cassandra=plugin/datacap-plugin-cassandra/pom.xml
+datacap-plugin-matrixone=plugin/datacap-plugin-matrixone/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
