--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -18,6 +18,7 @@ datacap-plugin-pinot=plugin/datacap-plugin-pinot/pom.xml
 datacap-plugin-cassandra=plugin/datacap-plugin-cassandra/pom.xml
 datacap-plugin-matrixone=plugin/datacap-plugin-matrixone/pom.xml
 datacap-plugin-scylladb=plugin/datacap-plugin-scylladb/pom.xml
+datacap-plugin-paradedb=plugin/datacap-plugin-paradedb/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
