--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,11 @@
         <module>plugin/datacap-plugin-influxdb</module>
         <module>plugin/datacap-plugin-scylladb</module>
         <module>plugin/datacap-plugin-paradedb</module>
+        <module>plugin/datacap-plugin-hive-2x</module>
         <!--        <module>plugin/datacap-plugin-timescale</module>-->
         <!--        <module>plugin/datacap-plugin-mongo-community</module>-->
         <!--        <module>plugin/datacap-jdbc-elasticsearch</module>-->
         <!--        <module>plugin/datacap-jdbc-h2</module>-->
-        <!--        <module>plugin/datacap-jdbc-hive</module>-->
         <!--        <module>plugin/datacap-jdbc-ignite</module>-->
         <!--        <module>plugin/datacap-jdbc-impala</module>-->
         <!--        <module>plugin/datacap-jdbc-iotdb</module>-->
