--- a/pom.xml
+++ b/pom.xml
@@ -48,14 +48,14 @@
         <module>plugin/datacap-plugin-paradedb</module>
         <module>plugin/datacap-plugin-hive-2x</module>
         <module>plugin/datacap-plugin-kyuubi</module>
+        <module>plugin/datacap-plugin-ignite</module>
+        <!--        <module>plugin/datacap-jdbc-impala</module>-->
+        <!--        <module>plugin/datacap-jdbc-kylin</module>-->
         <!--        <module>plugin/datacap-plugin-timescale</module>-->
         <!--        <module>plugin/datacap-plugin-mongo-community</module>-->
         <!--        <module>plugin/datacap-jdbc-elasticsearch</module>-->
         <!--        <module>plugin/datacap-jdbc-h2</module>-->
-        <!--        <module>plugin/datacap-jdbc-ignite</module>-->
-        <!--        <module>plugin/datacap-jdbc-impala</module>-->
         <!--        <module>plugin/datacap-jdbc-iotdb</module>-->
-        <!--        <module>plugin/datacap-jdbc-kylin</module>-->
         <!--        <module>plugin/datacap-jdbc-monetdb</module>-->
         <!--        <module>plugin/datacap-jdbc-mongo</module>-->
         <!--        <module>plugin/datacap-jdbc-ydb</module>-->
