--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -23,6 +23,7 @@ datacap-plugin-hive-2x=plugin/datacap-plugin-hive-2x/pom.xml
 datacap-plugin-kyuubi=plugin/datacap-plugin-kyuubi/pom.xml
 datacap-plugin-ignite=plugin/datacap-plugin-ignite/pom.xml
 datacap-plugin-impala=plugin/datacap-plugin-impala/pom.xml
+datacap-plugin-kylin=plugin/datacap-plugin-kylin/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
